--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, height=device-height, interactive-widget=resizes-content"
     name="viewport"
   />
-  <link href="@/assets/icons/logo.svg" rel="icon" type="image/svg+xml" />
+  <link href="src/assets/icons/logo.svg" rel="icon" type="image/svg+xml" />
   <title>Владимир Ярославцев | Frontend Developer</title>
 </head>
 <body>
